[tool.poetry]
name = "nmf-toolkit"
version = "0.1.0"
description = "A toolkit for performing NMF analysis on Air Sensor data"
authors = ["David H. Hagan <david.hagan@quant-aq.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "nmf_toolkit"},
    {include = "nmf_toolkit/*.py"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.2"
numpy = "^1.25.2"
nmf-python = {git = "https://github.com/dhhagan/nmf-python.git"}
pandas = "^2.1.0"
seaborn = "^0.12.2"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
